syntax = "proto3";
import "google/protobuf/wrappers.proto";
package tasks;

service TasksService {
    rpc GetAllTasks (Empty) returns (GetTasksResponse);
    rpc GetTaskById (TaskByIdRequest) returns (Task);
    rpc DeleteTask(TaskByIdRequest) returns (BoolResponse);
    rpc AddTask (Task) returns (Task);
    rpc UpdateTask(UpdateTaskRequest) returns (Task);
}

message UpdateTaskRequest{
    uint64 id = 1;
    Task task = 2;
}

message TaskByIdRequest{
    uint64 id = 1;
}

message BoolResponse{
    bool result = 1;
}


message GetTasksResponse {
    repeated Task tasks = 1;
}

message Task{
    uint64 id = 1;
    string name = 2;
    google.protobuf.StringValue desription = 3;
}

message Empty{}